--- a/css/domtree.css
+++ b/css/domtree.css
@@ -3,7 +3,7 @@
  * RESET
  *********************************************/
 
-html{color:#000;background:#222222;}
+html{color:#00ff00;background:#222222;}
 a{cursor:pointer;}
 html,body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,code,form,fieldset,legend,input,textarea,p,blockquote,th,td{margin:0;padding:0;}
 table{border-collapse:collapse;border-spacing:0;}
